--- a/src/util/translation/en.json
+++ b/src/util/translation/en.json
@@ -7,6 +7,7 @@
   "Room":"Room",
   "Search":"SEARCH",
   "wheelchair":"I need an accessible room",
-  "errorMessageEndDate":"Please select end date. Max. length of stay: 14 days",
-  "night":"/night"
+  "errorMessageEndDate":"Please select end date. Max. length of stay: {maxLengthofStay} days",
+  "night":"/night",
+  "errorMessage":"This field is required"
 }
