--- a/src/util/translation/fr.json
+++ b/src/util/translation/fr.json
@@ -16,6 +16,8 @@
   "Price":"Prix",
   "room_result":"Résultats de la salle",
   "previous":"Précédent",
-  "next":"Suivant"
+  "next":"Suivant",
+  "beds":"Des lits",
+  "search_dates":"Dates rechehe"
 
 }
