Added rating page and language and currency conversion and fixed minor bugs

--- a/src/util/translation/en.json
+++ b/src/util/translation/en.json
@@ -18,5 +18,17 @@
   "previous":"Previous",
   "next":"Next",
   "beds":"Beds",
-  "search_dates":"Search Dates"
+  "The 29-story Skyrise Tower rooms are smoke free and feature everyday comfort in jewel tones. The 351 sq.ft rooms, located near the pools and the Adventuredome, feature pillow-top mattresses, flat screen TV and Wi-Fi internet access and two queen beds. Wheelchair accessible rooms are available upon request by calling Room Reservations (1-877-434-9175).,,,,,":
+  "The 29-story Skyrise Tower rooms are smoke free and feature everyday comfort in jewel tones. The 351 sq.ft rooms, located near the pools and the Adventuredome, feature pillow-top mattresses, flat screen TV and Wi-Fi internet access and two queen beds. Wheelchair accessible rooms are available upon request by calling Room Reservations (1-877-434-9175)",
+  ",Modern comfort meets functional design with smoke free rooms in the 35-story West Tower. The 364 sq.ft rooms located directly above the hotel lobby, with close proximity to the shopping promenade and the Adventuredome, feature contemporary furnishings, vibrant décor, pillow-top mattresses, 32 inch flat panel plasma TV, and Wi-Fi internet access. Wheelchair accessible rooms are available upon request by calling Room Reservations (1-877-434-9175).,,,,":
+  "Modern comfort meets functional design with smoke free rooms in the 35-story West Tower. The 364 sq.ft rooms located directly above the hotel lobby, with close proximity to the shopping promenade and the Adventuredome, feature contemporary furnishings, vibrant dÃ©cor, pillow-top mattresses, 32 inch flat panel plasma TV, and Wi-Fi internet access. Wheelchair accessible rooms are available upon request by calling Room Reservations (1-877-434-9175).",
+  ",,,Smoke free and decorated in contemporary jewel and earth tones, the 15-story Casino Tower rooms are located directly above the casino. The 364 sq.ft. Casino Tower rooms are appointed with classic furnishings and include pillow-top mattresses, 40 inch flat panel plasma TV and Wi-Fi internet access.,,":
+  "Smoke free and decorated in contemporary jewel and earth tones, the 15-story Casino Tower rooms are located directly above the casino. The 364 sq.ft. Casino Tower rooms are appointed with classic furnishings and include pillow-top mattresses, 40 inch flat panel plasma TV and Wi-Fi internet access.",
+  "Wireless Internet Access":"Wireless Internet Access",
+  "Cable Pay and TV channel":"Cable Pay and TV channel",
+  "Alarm Clock":"Alarm Clock",
+  "In Room Safe":"In Room Safe",
+  "Iron and Ironing Board":"Iron and Ironing Board",
+  "Writing Desk and Chair":"Writing Desk and Chair",
+  "Hair Dryer":"Hair Dryer"
 }
