--- a/src/util/translation/fr.json
+++ b/src/util/translation/fr.json
@@ -18,6 +18,22 @@
   "previous":"Précédent",
   "next":"Suivant",
   "beds":"Des lits",
-  "search_dates":"Dates rechehe"
+  "search_dates":"Dates rechehe",
+  "The 29-story Skyrise Tower rooms are smoke free and feature everyday comfort in jewel tones. The 351 sq.ft rooms, located near the pools and the Adventuredome, feature pillow-top mattresses, flat screen TV and Wi-Fi internet access and two queen beds. Wheelchair accessible rooms are available upon request by calling Room Reservations (1-877-434-9175).,,,,," :
+  "Les chambres Skyrise Tower de 29 étages sont non-fumeurs et offrent un confort quotidien dans des tons de joyaux. Les chambres de 351 pieds carrés, situées près des piscines et de l'Adventuredome, disposent de matelas à plateau-coussin, d'une télévision à écran plat et d'un accès Internet Wi-Fi et de deux lits queen. Des chambres accessibles aux fauteuils roulants sont disponibles sur demande en appelant les réservations de chambres (1-877-434-9175).",
+  ",Modern comfort meets functional design with smoke free rooms in the 35-story West Tower. The 364 sq.ft rooms located directly above the hotel lobby, with close proximity to the shopping promenade and the Adventuredome, feature contemporary furnishings, vibrant décor, pillow-top mattresses, 32 inch flat panel plasma TV, and Wi-Fi internet access. Wheelchair accessible rooms are available upon request by calling Room Reservations (1-877-434-9175).,,,,":
+  "Le confort moderne rencontre un design fonctionnel avec des chambres non-fumeurs dans la tour ouest de 35 étages. Les chambres de 364 pieds carrés situées directement au-dessus du hall de l'hôtel, à proximité de la promenade commerçante et de l'Adventuredome, disposent d'un mobilier contemporain, d'un décor vibrant , matelas à plateau-coussin, télévision à écran plat plasma de 32 pouces et accès Internet Wi-Fi. Des chambres accessibles aux fauteuils roulants sont disponibles sur demande en appelant le service de réservation des chambres (1-877-434-9175).",
+  ",,,Smoke free and decorated in contemporary jewel and earth tones, the 15-story Casino Tower rooms are located directly above the casino. The 364 sq.ft. Casino Tower rooms are appointed with classic furnishings and include pillow-top mattresses, 40 inch flat panel plasma TV and Wi-Fi internet access.,,":
+  "Non-fumeurs et décorées dans des tons contemporains de pierres précieuses et de terre, les chambres de la tour du casino de 15 étages sont situées directement au-dessus du casino. Les 364 pi.ca. Les chambres de la Tour du Casino sont aménagées avec un mobilier classique et comprennent des matelas à plateau-coussin, une télévision à écran plat plasma de 40 pouces et un accès Internet Wi-Fi.",
+  "Wireless Internet Access":"Accès Internet sans fil",
+  "Cable Pay and TV channel":"Câble payant de télévision",
+  "Alarm Clock":"Réveil",
+  "In Room Safe":"Coffre-fort dans la chambre",
+  "Iron and Ironing Board":"Fer et planche à repasser",
+  "Writing Desk and Chair":"Bureau et chaise",
+  "Hair Dryer":"Sèche-cheveux",
+  "Standard Package":"Forfait standard",
+  "Standard Rate":"Taux standard",
+  "Select Package":"Sélectionez foait"
 
 }
