Added currency and language conversion

--- a/src/util/translation/en.json
+++ b/src/util/translation/en.json
@@ -1,5 +1,5 @@
 {
-  "1":"1",
+  " ":"",
   "my_booking": "My Booking",
   "login":"Login",
   "propertyName":"Property Name*",
@@ -32,7 +32,75 @@
   "Iron and Ironing Board":"Iron and Ironing Board",
   "Writing Desk and Chair":"Writing Desk and Chair",
   "Hair Dryer":"Hair Dryer",
-  "11. Traveler Info":"1. Traveler Info",
-  "12. Billing Info":"2. Billing Info",
-  "13. Payment Info":"3. Payment Info"
+  "room1. traveler info":"1. Traveler Info",
+  "room2. billing info":"2. Billing Info",
+  "room3. payment info":"3. Payment Info",
+  "booking-success":"Booking Successfull",
+  "upcoming-confirmation":"Upcoming Confirmation",
+  "print":"Print",
+  "email":"Email",
+  "cancel":"CancelRoom",
+  "room1":"Room 1",
+  "adult":"Adulte",
+  "child":"Enfant",
+  "cancel-policy":"Copy explaining the cancellation policy, if applicable",
+  "night-total":"/night total",
+  "room-total":"Room Total Summary",
+  "nightly-rate":"Nightly Rate",
+  "Taxes-Surcharges-Fees":"Taxes, Surcharges, Fees",
+  "total-stay":"Total for stay",
+  "guest-info":"Guest Information",
+  "first-name":"First Name",
+  "phone":"Phone",
+  "BillingAddress":"Billing Address",
+  "MailingAddress":"Mailing Address",
+  "country":"Country",
+  "state":"State",
+  "city":"City",
+  "zip":"Zip",
+  "PaymentInformation":"Payment Information",
+  "card":"Card NUmber",
+  "Expiry Month":"Expiry Month",
+  "ExpiryYear":"Expiry Year",
+  " First Name":"First Name",
+  " Phone":"Phone",
+  " Last Name":"Last Name",
+  " NEXT:BILLING INFO":"NEXT:BILLING INFO",
+  " Mailing Address 1":"Mailing Address 1",
+  " Mailing Address 2":"Mailing Address 2",
+  " Country":"Country",
+  " State":"State",
+  " City":"City",
+  " Zip":"Zip",
+  " NEXT:PAYMENT INFO":"NEXT:PAYMENT INFO",
+  " Edit Traveller Info":"Edit Traveller Info",
+  " Card Name":"Card Name",
+  " Exp MM":"Exp MM",
+  " Exp YY":"Exp YY",
+  " Edit Billing Info":"Edit Billing Info",
+  " PURCHASE":"PURCHASE",
+  "total-due":"Total Due",
+  "special-offer":"Send me special offer",
+  "agree-to":"I agree to",
+  "terms-policy":"Terms and Policies",
+  "travel":"of travel",
+  "itinerary":"Your Trip Itinerary",
+  "remove":"Remove",
+  "due-now":"Due Now",
+  "due-resort":"Due Resort",
+  "Continue Shopping":"Continue Shopping",
+  "invalid-booking":"Invalid Booking",
+  " First Name cannot be empty":"First Name cannot be empty",
+  " Please enter a valid 10-digit phone number":"Please enter a valid 10-digit phone number",
+  " Please enter a valid email":"Please enter a valid email",
+  " Address cannot be empty":"Address cannot be empty",
+  " City is required":"City is required",
+  " Please enter a valid Zip Code":"Please enter a valid Zip Code",
+  "This field is required":"This field is required",
+  " Please enter a valid Card Name":"Please enter a valid Card Name",
+  " Please enter a valid expiry month":"Please enter a valid expiry month",
+  " Please enter a valid expiry year in YY format":"Please enter a valid expiry year in YY format",
+  " Please enter a valid CVV Code":"Please enter a valid CVV Code",
+  " Please agree to Terms and Conditions":"Please agree to Terms and Conditions",
+  "need-help":"Need help?"
 }
