--- a/src/util/translation/fr.json
+++ b/src/util/translation/fr.json
@@ -1,4 +1,5 @@
 {
+  " ":"",
   "my_booking": "Ma réservation",
   "login":"Connexion",
   "propertyName":"Nom de la propriété*",
@@ -35,8 +36,78 @@
   "Standard Package":"Forfait standard",
   "Standard Rate":"Taux standard",
   "Select Package":"Sélectionez foait",
-  "11. Traveler Info":"1. Informations voyageurs",
-  "12. Billing Info":"2. Informations de facturation",
-  "13. Payment Info":"3. Informations de paiement"
+  " 1. traveler info":"1. Informations voyageurs",
+  " 2. billing info":"2. Informations de facturation",
+  " 3. payment info":"3. Informations de paiement",
+  "booking-success":"Réservation réussie",
+  "upcoming-confirmation":"Confirmation à venir",
+  "print":"Impim",
+  "email":"Email",
+  "cancel":"AnnulerChambre",
+  "room1":"Chabe1",
+  "adult":"Adult",
+  "child":"Child",
+  "checkin":"Enregistret",
+  "checkout":"Vérifier",
+  "cancel-policy":"Copie expliquant la politique d'annulation, le cas échéant",
+  "night-total":"/total de la nuit",
+  "room-total":"Récapitulatif total de la chambre",
+  "nightly-rate":"Tarif à la nuit",
+  "Taxes-Surcharges-Fees":"Taxes, suppléments, frais",
+  "total-stay":"Total du séjour",
+  "guest-info":"Informations client",
+  "first-name":"Prénom",
+  "phone":"Téléphone",
+  "BillingAddress":"adresse de facturation",
+  "MailingAddress":"Adresse postale",
+  "country":"Pays",
+  "state":"État",
+  "city":"Ville",
+  "zip":"Postal",
+  "PaymentInformation":"Informations de paiement",
+  "card":"Numéro de carte",
+  "Expiry Month":"Mois d'expiration",
+  "ExpiryYear":"Année d'expiration",
+  " First Name":"Prénom",
+  " Phone":"Téléphone",
+  " Last Name":"Nom de famille",
+  " NEXT:BILLING INFO":"SUIVANT:INFOS DE FACTURATION",
+  " Mailing Address 1":"Adresse postale 1",
+  " Mailing Address 2":"Adresse postale 2",
+  " Country":"Pays",
+  " State":"État",
+  " City":"Ville",
+  " Zip":"Postal",
+  " NEXT:PAYMENT INFO":"SUIVANT: INFORMATIONS DE PAIEMENT",
+  " Edit Traveller Info":"Modifier les informations sur le voyageur",
+  " Card Name":"Nom de la carte",
+  " Exp MM":"Exp MM",
+  " Exp YY":"Exp AA",
+  " Edit Billing Info":"Modifier les informations de facturation",
+  " PURCHASE":"ACHAT",
+  "total-due":"Total dû",
+  "special-offer":"Envoyez-moi une offre spéciale",
+  "agree-to":"Je suis d'accord pour",
+  "terms-policy":"Termes et politiques",
+  "travel":"de voyage",
+  "itinerary":"Votre itinéraire de voyage",
+  "remove":"Retirer",
+  "due-now":"Pour tout de suite",
+  "due-resort":"En raison de la station",
+  "Continue Shopping":"Continuer vos achats",
+  "invalid-booking":"Réservation invalide",
+  " First Name cannot be empty":"Le prénom ne peut pas être vide",
+  " Please enter a valid 10-digit phone number":"Veuillez entrer un numéro de téléphone valide à 10 chiffres",
+  " Please enter a valid email":"Veuillez entrer un email valide",
+  " Address cannot be empty":"L'adresse ne peut pas être vide",
+  " City is required":"La ville est obligatoire",
+  " Please enter a valid Zip Code":"Veuillez entrer un code postal valide",
+  "This field is required":"Ce champ est obligatoire",
+  " Please enter a valid Card Name":"Veuillez entrer un nom de carte valide",
+  " Please enter a valid expiry month":"Veuillez entrer un mois d'expiration valide",
+  " Please enter a valid expiry year in YY format":"Veuillez saisir une année d'expiration valide au format AA",
+  " Please enter a valid CVV Code":"Veuillez entrer un code CVV valide",
+  " Please agree to Terms and Conditions":"Veuillez accepter les termes et conditions",
+  "need-help":"Besoin d'aide?"
 
 }
