--- a/src/util/translation/en.json
+++ b/src/util/translation/en.json
@@ -59,8 +59,8 @@
   "city":"City",
   "zip":"Zip",
   "PaymentInformation":"Payment Information",
-  "card":"Card NUmber",
-  "Expiry Month":"Expiry Month",
+  "card":"Card Number",
+  "ExpiryMonth":"Expiry Month",
   "ExpiryYear":"Expiry Year",
   " First Name":"First Name",
   " Phone":"Phone",
