--- a/src/util/translation/fr.json
+++ b/src/util/translation/fr.json
@@ -66,7 +66,7 @@
   "zip":"Postal",
   "PaymentInformation":"Informations de paiement",
   "card":"Numéro de carte",
-  "Expiry Month":"Mois d'expiration",
+  "ExpiryMonth":"Mois d'expiration",
   "ExpiryYear":"Année d'expiration",
   " First Name":"Prénom",
   " Phone":"Téléphone",
